crates/shuffle/tests/snapshots/scenario_fixtures__rollback_phase4_deep_rollback.snap
---
source: crates/shuffle/tests/scenario_fixtures.rs
expression: "Checkpoint { frontier: &frontier4, read: read4, }"
---
Checkpoint {
    frontier: Frontier {
        journals: [
            JournalFrontier {
                journal: "testing/apples/2020202020202020/category=alpha/pivot=00",
                binding: 0,
                producers: [
                    ProducerFrontier {
                        producer: Producer(01:00:00:00:00:01),
                        last_commit: Clock(0s 3000ns),
                        hinted_commit: Clock(0s 0ns),
                        offset: -1095,
                    },
                ],
                bytes_read_delta: 286,
                bytes_behind_delta: 0,
            },
        ],
        flushed_lsn: [
            1/3,
        ],
        latest_backfill_begin: {},
        latest_backfill_complete: {},
        binding_gap_floors: {},
        unresolved_hints: 0,
    },
    read: [],
}
